fixes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ main.spec
 inputs.txt
 eula.txt
 create_shortcut.bat
+/.idea/.gitignore
+/.idea/astonia_launcher.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
