--- a/.github/workflows/pyinstallerv2.yml
+++ b/.github/workflows/pyinstallerv2.yml
@@ -1,13 +1,36 @@
 on:
   push:
+    tags:
+      - 'v*'
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  create_release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: false
+
+  build_release:
+    name: build release
+    needs: create_release
     strategy:
-      fail-fast: false
       matrix:
-        os: [ 'windows-latest', 'ubuntu-latest, 'macos-latest' ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        include:
+          - os: ubuntu-latest
+            release_suffix: ubuntu
+          - os: macos-latest
+            release_suffix: mac
+          - os: windows-latest
+            release_suffix: windows
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
@@ -16,13 +39,11 @@ jobs:
           python-version: 3.7
       - run: pip install -r src/requirements.txt pyinstaller
       - run: pyinstaller --noconfirm --onefile --nowindow -add-data="icons/red_cross.png:img" src/main.py
-      # Optionally verify that it works (provided that it does not need user interaction)
       - uses: actions/upload-artifact@v2
         with:
           path: dist/*
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: |
-            ${{ matrix.asset }}
+          tag_name: ${{ needs.create_release.outputs.tag-name }}
+          files: release_${{ matrix.release_suffix }}
