--- a/.github/workflows/pyinstaller.yml
+++ b/.github/workflows/pyinstaller.yml
@@ -26,7 +26,6 @@ jobs:
             platform-name: linux.x64
     steps:
       - name: Checkout code
-        # fetch-depth=0 and v1 are needed for 'git describe' to work correctly.
         uses: actions/checkout@v1
         with:
           fetch-depth: 0
@@ -48,17 +47,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install PyInstaller==${{ env.pyinstaller-version }} -r src/requirements.txt
+      - name: Prepare "Settings" folder
+        run: |
+          mkdir -p src/settings
+          echo '{"servers": [{"name": "Ugaris", "address": "game.ugaris.com"}]}' > src/settings/servers.json
       - name: Run PyInstaller
         env:
-          PYTHONOPTIMIZE: 1 # Enable optimizations as if the -O flag is given.
-          PYTHONHASHSEED: 42 # Try to ensure deterministic results.
+          PYTHONOPTIMIZE: 1
+          PYTHONHASHSEED: 42
         run: |
           pyinstaller src/main.spec
-      # This step exists for debugging.  Such as checking if data files were included correctly by PyInstaller.
       - name: List distribution files
         run: |
           find dist
-      # Archive the PyInstaller build using the appropriate tool for the platform.
       - name: Tar files
         if: runner.os != 'Windows'
         run: |
@@ -68,7 +69,6 @@ jobs:
         shell: pwsh
         run: |
           Compress-Archive dist/*/ ${{ env.archive-name }}.zip
-      # Upload archives as artifacts, these can be downloaded from the GitHub actions page.
       - name: "Upload Artifact"
         uses: actions/upload-artifact@v2
         with:
@@ -76,7 +76,6 @@ jobs:
           path: ${{ env.archive-name }}.*
           retention-days: 7
           if-no-files-found: error
-      # If a tag is pushed then a new archives are uploaded to GitHub Releases automatically.
       - name: Upload release
         if: startsWith(github.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
